# keboola_streamlit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml   LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
.streamlit/: secrets.toml.dist
src/keboola_streamlit/: __init__.py  keboola_streamlit.py
tests/: test_keboola_streamlit.py
